--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "ityped": "^1.0.3",
     "react": "^18.0.0",
+    "react-barcode": "^1.4.1",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
